<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" >

    <string name="app_name">日日顺乐家</string>
    <string name="tab_home">首页</string>
    <string name="tab_life">生活+</string>
    <string name="tab_shop_cart">购物车</string>
    <string name="tab_person">我的</string>
    <string name="user_password_modify">修改密码</string>
    <string name="contact_method">联系方式（邮箱/手机）</string>
    <string name="feedback">反馈</string>
    <string name="submit_text">提交</string>
    <string name="loading">请稍候...</string>

    <string name="user_register_protocol">用户注册协议</string>
    <string name="scan_cabinet_text">扫描确认柜子</string>
    <string name="scan_text">将二维码放入框内，扫码成功即可开箱取件</string>
    <string name="show_package_text">查看包裹</string>
    <string name="login_tip">立即登录</string>
    <string name="login">登录</string>
    <string name="pa_insurance">乐安险</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="open_box">扫码开箱</string>
    <string name="express_mail">快件寄取</string>
    <string name="appliance_service">家电保养</string>
    <string name="referral_code">推荐码</string>
    <string name="input_referral_code">填写推荐码</string>
    <string name="user_refuse_deliver">大件拒投</string>

    <string name="count_down_tip">您还可以进行操作的时间剩余：%1$d秒</string>
    <string name="fetching_express_content">亲，我有一个快件（%1$s：%2$s）请帮我代取一下吧，取件地址：%3$s，取件码：%4$s，快递员电话：%5$s，谢谢啦！</string>
    <string name="fetching_express_content_other">亲，我有一个快件（快递单号：%1$s）请帮我代取一下吧，取件地址：%2$s，取件码：%3$s，快递员电话：%4$s，谢谢啦！</string>

    <string name="pickup_number">取&#160; 件&#160;  码 </string>
    <string name="express_no">运&#160; 单&#160;  号 </string>
    <string name="postman_telephone">快递电话</string>
    <string name="overdue_time">取件截止时间</string>
    <string name="overtime">超时</string>
    <string name="shunxinbao">顺心保</string>
    <string name="soon_to_take">已超时，请尽快取走</string>
    <string name="shipping_address">收货地址：</string>
    <string name="consignee">收货人：</string>
    <string name="fee">含运费</string>

    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>

    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>

    <string name="user_coupons">我的优惠券</string>
    <string name="title_coupons">优惠领取</string>
    <string name="share">分享</string>
    <string name="rules_coupons">使用规则</string>
    <string name="no_user_coupon">不使用优惠券</string>

    <string name="convenient_pickup">便捷取件</string>
    <string name="extended_remind">超期提醒</string>
    <string name="take_record">取件记录</string>
    <string name="questionnaire">调查问卷</string>
    <string name="no_package">亲，还木有发现您的快件呀！</string>
    <string name="no_extended_package">赞一个，木有超期件！</string>
    <string name="no_history_package">亲，还木有发现您的快件记录呀！</string>

    <string name="open_package_box_success">开箱成功</string>
    <string name="open_package_box_failed">开箱失败</string>
    <string name="open_package_box_failure_tip">您可以通过取件码开箱</string>
    <string name="express_tip">您共有%1$d件快递。</string>
    <string name="empty_express_tip">您共有%1$d件快递，本柜子已经没有您的快件。</string>
    <string name="my_message">我的消息</string>
    <string name="reminder_tip">温馨提示：</string>
    <string name="seek_help">如果取件过程中出现故障，请拨打客服电话</string>
    <string name="hotline_counseling">4008&#8211;315&#8211;315</string>
    <string name="remain_duration">在箱时长：</string>
    <string name="common_express">常用快递公司</string>
    <string name="nearby_postman">附近快递员</string>
    <string name="call">拨打</string>

    <string name="no_order_address">请先添加一个地址</string>
    <string name="order_address">地址：<xliff:g id="kk">%s</xliff:g></string>
    <string name="order_username">联系人：<xliff:g id="kk">%s</xliff:g></string>
    <string name="order_phone">电话：<xliff:g id="kk">%s</xliff:g></string>

    <string name="add_address">新增地址</string>
    <string name="manage_address">管理地址</string>
    <string name="default_flag">[默认]</string>
    <string name="set_default_text">设为默认地址</string>
    <string name="add_community_address">添加地址</string>
    <string name="modify_community_address">修改地址</string>
    <string name="community_address_update_delete_hint">长按地址可以编辑和删除</string>
    <string name="scroll_to_show_pro_details">&#160; &#160; 继续拖动，查看商品详情&#160; &#160;</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="pay_by_wx_title">通过微信支付</string>
    <string name="app_tip">提示</string>

    <string name="choose_address">选择地址</string>
    <string name="manage_express_address">管理收货地址</string>
    <string name="brand">品牌</string>
    <string name="sub_brand">子品牌</string>
    <string name="product_category">产品类型</string>
    <string name="product">产品</string>
    <string name="service_type">服务类型</string>
    <string name="service_date">服务日期</string>
    <string name="service_time">服务时间</string>
    <string name="service_master">服务师傅</string>
    <string name="fault_description">故障描述</string>
    <string name="service_business">所属服务商</string>
    <string name="service_date_tip">请选择服务日期</string>
    <string name="service_time_tip">请选择服务时间段</string>
    <string name="appoint_address">维修地址：<xliff:g id="kk">%s</xliff:g></string>
    <string name="appoint_username">联系人：<xliff:g id="kk">%s</xliff:g></string>
    <string name="appoint_phone">电话：<xliff:g id="kk">%s</xliff:g></string>
    <string name="appoint_option_empty_tip">请补充完整预约选项，以便服务兵快速的为您上门服务！</string>
    <string name="appoint_success_tip">预约成功！</string>
    <string name="appoint_failure_tip">网络有点繁忙，预约失败了哦!</string>
    <string name="order_submit">提交</string>
    <string name="fault_description_et_hint">请简单描述一下电器出现的故障，以便我们快速定位问题。</string>

    <string name="product_spec">规&#160; &#160;&#160; &#160; &#160;格</string>
    <string name="product_madein">产&#160; &#160;&#160; &#160; &#160;地</string>
    <string name="service_area">服务地区</string>
    <string name="kindly_reminder">客服电话</string>
    <string name="reminder_content">4008-315-315</string>
    <string name="no_search_show">暂时没有搜索到&#160;“%1$s”&#160;相关产品，</string>
    <string name="comment_success">评价成功，感谢您的参与！</string>
    <string name="comment_fail">评价失败，请重新提交！</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>
    <string name="produce_coupon">&#160;&#160;&#160;%1$s元优惠&#160;&#160;&#160;</string>
    <string name="produce_no_coupon">暂无可用优惠劵</string>
    <string name="produce_select_coupon">请选择优惠劵</string>
    <string name="produce_no_select_coupon">不使用优惠劵</string>
    <string name="coupons_data_empty_tips">小乐给你支个招，下次优惠活动，\n下手一定要快！</string>
    <string name="no_choose_product">您还没有选择宝贝哦！</string>

    <string name="only_choose_num">超出可选图片张数</string>
    <string name="select">已选</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="category">分类</string>
    <string name="platform_reply">[平台回复]&#160;:&#160;%1$s</string>
</resources>
