<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE"
    >

    <include android:id="@+id/title_bar"
        layout="@layout/title_bar_text" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/no_use_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp">

                    <ImageView
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:layout_gravity="left"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_coupon_red_left"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/selector_red_squares_button"
                        android:gravity="center"
                        android:textColor="@color/color_white"
                        android:text="@string/no_user_coupon"/>

                    <ImageView
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:layout_gravity="right"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_coupon_red_right_2"/>
                    </LinearLayout>


                <com.haier.cabinet.customer.widget.recyclerview.CustRecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/empty_view"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableTop="@drawable/ic_coupon_empty"
                    android:drawablePadding="25dp"
                    android:textColor="#333"
                    android:textSize="16sp"
                    android:text="@string/produce_no_coupon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColor="#989898"
                    android:textSize="13sp"
                    android:text="@string/coupons_data_empty_tips"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>