<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/title_bar"
            layout="@layout/title_bar_shop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/banner_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/ic_product_default"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:paddingBottom="3dip"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dip">

                        <TextView
                            android:id="@+id/pro_name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:paddingBottom="10dip"
                        android:paddingLeft="15dp">

                        <TextView
                            android:id="@+id/discount_price_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/common_color"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/retail_price_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/gray_text"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:layout_marginTop="10dp"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:gravity="center_vertical"
                            android:text="@string/product_spec"
                            android:textColor="@color/light_grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/spec_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textColor="@color/middle_gray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:gravity="center_vertical"
                            android:text="@string/service_area"
                            android:textColor="@color/light_grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/service_area_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textColor="@color/middle_gray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:drawablePadding="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/product_madein"
                            android:textColor="@color/light_grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/madein_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textColor="@color/middle_gray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip"
                        android:paddingRight="15dip"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:drawablePadding="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/kindly_reminder"
                            android:textColor="@color/light_grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/phone_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/reminder_content"
                            android:textColor="@color/red_dark"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="30dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/scroll_to_show_pro_details"
                            android:textColor="#353535"
                            android:textSize="@dimen/font_medium"
                            android:visibility="gone" />

                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="#dadada"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>


            <FrameLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/title_bar">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="15dip">

                        <Button
                            android:id="@+id/minusBtn"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@drawable/btn_shopping_cart_product_num_reduce" />

                        <EditText
                            android:id="@+id/pro_count_text"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@null"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:gravity="center"
                            android:inputType="number"
                            android:textSize="@dimen/font_medium" />

                        <Button
                            android:id="@+id/addBtn"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@drawable/btn_shopping_cart_product_num_add" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/place_order_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@color/common_color"
                        android:paddingLeft="35dp"
                        android:paddingRight="35dp"
                        android:text="我要下单"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_bg" />
            </FrameLayout>

        </RelativeLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/cart_anim_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/cart_anim_icon"
        android:visibility="gone" />

</FrameLayout>